# newCAM_emulation

./: README.md  pyproject.toml
newCAM_emulation/: Model.py  NN_pred.py  loaddata.py  train.py
